[package]
name = "glam_rusttype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owned_ttf_parser = { version = "0.18.1" }
glam = "0.29"
glam_rect = { version = "0.1.0", git = "https://github.com/kirinokirino/glam_rect.git" }  
